# webserver-base

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cache-buster.json  cache-buster.txt  deno.jsonc  docker-compose.yml
html/layouts/: base.hbs
html/pages/: 404.hbs
html/partials/: canonical-url.hbs  footer.hbs
src/: axum_plausible_analytics.rs  lib.rs
src/base_settings/: mod.rs
src/settings/: environment.rs  mod.rs  settings.rs
src/templates/: error.rs  template_registry.rs
src/templates/schema/: copyright.rs  footer.rs  header.rs  image.rs  metadata.rs  mod.rs  nav_link.rs  page.rs  social_media.rs  twitter.rs
static/file/: humans.txt
static/script/: bundle.ts  frontend-error.ts  main.ts  mod.ts
static/script/webserver-base/: bundle.ts  frontend-error.ts  logger.ts  mod.ts  scitylana.ts
static/scss/core/: _anchor.scss  _index.scss  _media-queries.scss  _reset.scss  _theme.scss
static/scss/pages/: _404.scss
static/scss/partials/: _index.scss  _main.scss
template_web_server/: Cargo.toml
template_web_server/src/: lib.rs  main.rs  template_data.rs  webserver_error.rs
ui/html/layouts/: base.hbs
ui/html/pages/: 404.hbs  home.hbs
ui/html/partials/: footer.hbs  header.hbs  metadata.hbs  nav.hbs  page-display-name.hbs
ui/static/file/: humans.txt
ui/static/script/: bundle.ts  mod.ts  scitylana.ts
ui/static/scss/: main.scss
ui/static/scss/abstracts/: _index.scss  _media-queries.scss  _random.scss  _theme.scss
ui/static/scss/components/: _grid-item.scss  _grid.scss  _index.scss  _pdf.scss
ui/static/scss/core/: _anchor.scss  _grid-item.scss  _grid.scss  _index.scss  _variables.scss
ui/static/scss/layout/: _body.scss  _footer.scss  _header.scss  _index.scss  _nav.scss
ui/static/scss/pages/: _404.scss  _home.scss  _index.scss
ui/static/scss/partials/: _body.scss  _footer.scss  _header.scss  _nav.scss
webserver_base/: Cargo.toml
webserver_base/src/: axum_plausible_analytics.rs  cache_buster.rs  frontend_error_logger.rs  ip.rs  lib.rs
webserver_base/src/base_settings/: base_settings.rs  mod.rs
webserver_base/src/templates/: error.rs  mod.rs  template_registry.rs
webserver_base/src/templates/schema/: copyright.rs  footer.rs  header.rs  image.rs  metadata.rs  mod.rs  nav_link.rs  social_media.rs
