[workspace]
members = [
    "webserver_base",
    "template_web_server"
]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2021"
rust-version = "1.75"
authors = ["Todd Everett Griffin <toddgriffin@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/goddtriffin/webserver-base"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library which contains shared logic for all of my webserver projects."
license-file = "LICENSE"
keywords = ["Todd", "Everett", "Griffin", "webserver", "base"]
categories = ["web-programming"]
exclude = [
    ".idea/*",
    ".github/*",
]

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[workspace.lints.clippy]
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "allow", priority = 1 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[workspace.dependencies]
# axum
axum = {version = "0.7.4", features = ["ws", "multipart", "tracing", "macros", "tokio"]}

# tracing
tracing = "0.1.40"

# serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# templating
handlebars = "5.1.0"

# http request
reqwest = { version = "0.11.24", default-features = false, features = [ "json", "rustls-tls" ] }

# time
chrono = { version = "0.4.33", features = ["default", "serde"] }

# plausible analytics
plausible-rs = "0.1.3"
