[workspace]
members = [
    "webserver_base",
    "template_web_server"
]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2021"
rust-version = "1.76"
authors = ["Todd Everett Griffin <toddgriffin@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/goddtriffin/webserver-base"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library which contains shared logic for all of my webserver projects."
license-file = "LICENSE"
keywords = ["Todd", "Everett", "Griffin", "webserver", "base"]
categories = ["web-programming"]
exclude = [
    ".idea/*",
    ".github/*",
]

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[workspace.lints.clippy]
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "allow", priority = 1 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[workspace.dependencies]
# OpenSSL bug fix (TODO - is there an easier fix?)
openssl = { version = "0.10.63", features = ["vendored"]}

# tokio
tokio = { version = "1.36.0", features = ["full", "tracing"] }

# futures
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }

# axum
axum = {version = "0.7.4", features = ["ws", "multipart", "tracing", "macros", "tokio"]}
axum-extra = "0.9.2"
tower = { version = "0.4.13", features = ["full"]}
tower-http = { version= "0.5.1", features=["full"]}

# http request
reqwest = { version = "0.11.24", default-features = false, features = [ "json", "rustls-tls" ] }

# tracing
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18",  features=["env-filter"]}

# serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"

# error monitoring
sentry = { version = "0.32.2", features = ["tracing", "tower", "backtrace"] }

# sitemap
sitemap-rs = "0.2.1"
xml-builder = "0.5.2"
chrono = { version = "0.4.33", features = ["default", "serde"] }

# markdown
handlebars = "5.1.0"
pulldown-cmark = "0.10.0"

# random
rand = "0.8.5"

# plausible analytics
plausible-rs = "0.1.3"
