[workspace]
members = ["webserver_base", "template_web_server"]
resolver = "2"

[workspace.package]
version = "0.1.12"
edition = "2021"
rust-version = "1.83"
authors = ["Todd Everett Griffin <tgriffin115@gmail.com>"]
readme = "README.md"
repository = "https://github.com/goddtriffin/webserver-base"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library which contains shared logic for all of my webserver projects."
license-file = "LICENSE"
keywords = ["Todd", "Everett", "Griffin", "webserver", "base"]
categories = ["web-programming"]
include = ["**/*.rs", "Cargo.toml", ".clippy.toml", "LICENSE", "README.md"]

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = 0 }
unfulfilled_lint_expectations = { level = "forbid", priority = 1 }

[workspace.lints.clippy]
allow_attributes = { level = "forbid", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "allow", priority = 0 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[workspace.dependencies]
# tokio
tokio = { version = "1.40.0", features = ["full", "tracing"] }

# futures
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
  "sink",
  "std",
] }

# axum
axum = { version = "0.7.6", features = [
  "ws",
  "multipart",
  "tracing",
  "macros",
  "tokio",
] }
axum-extra = "0.9.4"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }

# http request
reqwest = { version = "0.12.7", default-features = false, features = [
  "json",
  "rustls-tls",
] }

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# serde
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34+deprecated"

# error monitoring
sentry = { version = "0.34.0", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "debug-images",
  "tracing",
  "tower",
  "reqwest",
  "rustls",
] }

# crypto
md5 = "0.7.0"

# sitemap
sitemap-rs = "0.2.2"
xml-builder = "0.5.3"
chrono = { version = "0.4.38", features = ["default", "serde"] }

# markdown
handlebars = "6.3.0"
pulldown-cmark = "0.12.1"

# random
rand = "0.8.5"

# my homebrew libraries
plausible-rs = "0.1.4"
