[package]
name = "webserver-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# axum
axum.workspace = true

# tracing
tracing.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true

# crypto
md5.workspace = true

# templating
handlebars.workspace = true

# http request
reqwest.workspace = true

# time
chrono.workspace = true

# plausible analytics
plausible-rs.workspace = true
